--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -30,6 +30,8 @@
                                    id="floatingInputEmail"
                                    placeholder="Địa chỉ email đăng ký"
                                    th:field="*{email}">
+                            <p th:text="${err}" style="color: red"></p>
+
                         </div>
                         <hr>
                         <div class="form-floating mb-3">
@@ -43,6 +45,7 @@
                         <div class="form-floating mb-3">
                             <label for="floatingPasswordConfirm">Nhập lại mật khẩu</label>
                             <input type="password"
+                                   oninput="checkPasswordMatch(this);"
                                    class="form-control"
                                    id="floatingPasswordConfirm"
                                    placeholder="Nhập lại mật khẩu"
@@ -63,6 +66,15 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+    function checkPasswordMatch(fieldConfirmPassword) {
+        if (fieldConfirmPassword.value != $("#floatingPassword").val()) {
+            fieldConfirmPassword.setCustomValidity("Passwords do not match!");
+        } else {
+            fieldConfirmPassword.setCustomValidity("");
+        }
+    }
+</script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
