--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,52 +1,52 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link th:href="@{/web/css/login.css}" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
-<body>
-<div class="container">
-    <div class="row">
-        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-            <div class="card border-0 shadow rounded-3 my-5">
-                <div class="card-body p-4 p-sm-5">
-                    <h5 class="card-title text-center mb-5 fw-light fs-5">Đăng nhập</h5>
-                    <form th:action="@{/login}" th:method="post">
-                        <div class="form-floating mb-3">
-                            <label for="floatingInput">Địa chỉ email</label>
-                            <input type="text" class="form-control" name="email" id="floatingInput" placeholder="Nhập địa chỉ email">
-                        </div>
-                        <div class="form-floating mb-3">
-                            <label for="floatingPassword">Mật khẩu</label>
-                            <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Nhập mật khẩu">
-                        </div>
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <link th:href="@{/web/css/login.css}" rel="stylesheet">-->
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
+<!--</head>-->
+<!--<body>-->
+<!--<div class="container">-->
+<!--    <div class="row">-->
+<!--        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">-->
+<!--            <div class="card border-0 shadow rounded-3 my-5">-->
+<!--                <div class="card-body p-4 p-sm-5">-->
+<!--                    <h5 class="card-title text-center mb-5 fw-light fs-5">Đăng nhập</h5>-->
+<!--                    <form th:action="@{/login}" th:method="post">-->
+<!--                        <div class="form-floating mb-3">-->
+<!--                            <label for="floatingInput">Địa chỉ email</label>-->
+<!--                            <input type="text" class="form-control" name="email" id="floatingInput" placeholder="Nhập địa chỉ email">-->
+<!--                        </div>-->
+<!--                        <div class="form-floating mb-3">-->
+<!--                            <label for="floatingPassword">Mật khẩu</label>-->
+<!--                            <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Nhập mật khẩu">-->
+<!--                        </div>-->
 
-                        <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
-                            <label class="form-check-label" for="rememberPasswordCheck">
-                                Remember password
-                            </label>
-                        </div>
-                        <div class="d-grid">
-                            <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign
-                                in</button>
-                        </div>
-                        <hr class="my-4">
-                        <div class="d-grid mb-2">
+<!--                        <div class="form-check mb-3">-->
+<!--                            <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">-->
+<!--                            <label class="form-check-label" for="rememberPasswordCheck">-->
+<!--                                Remember password-->
+<!--                            </label>-->
+<!--                        </div>-->
+<!--                        <div class="d-grid">-->
+<!--                            <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign-->
+<!--                                in</button>-->
+<!--                        </div>-->
+<!--                        <hr class="my-4">-->
+<!--                        <div class="d-grid mb-2">-->
 
-                        </div>
-                        <div class="d-grid">
+<!--                        </div>-->
+<!--                        <div class="d-grid">-->
 
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
+<!--                        </div>-->
+<!--                    </form>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
+<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
+<!--</body>-->
 
-</html>
+<!--</html>-->
