- upload to cloudinary
Signed-off-by: ngochoang0109 <hoangtn0109@gmail.com>

--- a/src/main/resources/templates/admin/admin-layout.html
+++ b/src/main/resources/templates/admin/admin-layout.html
@@ -96,6 +96,10 @@
                     <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                     Quản lý năm phát hành
                 </a>
+                <a class="nav-link" th:href="@{/admin/videos}">
+                    <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                    Quản lý Video
+                </a>
             </div>
         </div>
         <div class="sb-sidenav-footer">
