--- a/src/main/resources/templates/admin/image-manager.html
+++ b/src/main/resources/templates/admin/image-manager.html
@@ -13,20 +13,13 @@
         <main>
             <div class="container-fluid px-4">
                 <form class="mt-4 mb-4 col-4"
-                      th:action="@{/admin/video/add}" th:object="${video}"
+                      th:action="@{/admin/image/add}" th:object="${image}"
                       method="post" enctype="multipart/form-data">
                     <div class="mb-3">
-                        <label for="file" class="form-label">Chọn tải video</label>
+                        <label for="file" class="form-label">Chọn tệp ảnh</label>
                         <input type="file" class="form-control" id="file" th:field="*{file}">
                     </div>
-                    <div class="mb-3">
-                        <label for="type" class="form-label">Chọn loại video</label>
-                        <select id="type" class="form-select" th:field="*{type}">
-                            <option value="trailer">Video trailer</option>
-                            <option value="movie">Video movie</option>
-                        </select>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Add video</button>
+                    <button type="submit" class="btn btn-primary">Thêm ảnh</button>
                 </form>
                 <div class="card mb-4">
                     <div class="card-header">
@@ -34,25 +27,21 @@
                         Danh sách thể loại
                     </div>
                     <div class="card-body">
-                        <table class="table table-dark table-borderless">
+                        <table class="table table-dark table-borderless table-image">
                             <thead>
                             <tr>
                                 <th class="text-center">ID</th>
-                                <th class="text-center">Video</th>
-                                <th class="text-center">Thể loại</th>
+                                <th class="text-center">Hình ảnh</th>
                                 <th class="text-center">Hành động</th>
                             </tr>
                             </thead>
                             <tbody>
-                            <tr class="text-center" th:each="item, state : ${lstVideo}">
-                                <td id="idVideo" th:text="${item.id}"></td>
-                                <td id="sourceVideo">
-                                    <video controls>
-                                        <source th:src="${item.source}" type="video/mp4"></source>
-                                    </video>
+                            <tr class="text-center" th:each="item, state : ${lstImage}">
+                                <td id="idGenre" th:text="${item.id}"></td>
+                                <td id="nameGenre" class="w-50 h-50">
+                                    <img class="w-25 h-25 img-fluid img-thumbnail"  th:src="${item.source}">
                                 </td>
-                                <td id="typeVideo" th:text="${item.type}"></td>
-                                <td>
+                                <td class="w-25">
                                     <button class="btn btn-info mx-3 btnEditGenre"
                                             th:id="${item.id}"
                                             type="button"
