--- a/src/main/resources/templates/admin/admin-index.html
+++ b/src/main/resources/templates/admin/admin-index.html
@@ -78,12 +78,8 @@
                 </div>
             </div>
         </main>
-        <footer class="py-4 bg-light mt-auto">
-            <div class="container-fluid px-4">
-                <div class="d-flex align-items-center justify-content-between small">
-                    <div class="text-muted">Copyright &copy; Your Website 2021</div>
-                </div>
-            </div>
+        <footer th:replace="admin/admin-layout.html::footer">
+
         </footer>
     </div>
 </div>
