--- a/src/main/resources/templates/admin/admin-layout.html
+++ b/src/main/resources/templates/admin/admin-layout.html
@@ -43,43 +43,22 @@
     <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
         <div class="sb-sidenav-menu">
             <div class="nav">
-                <div class="sb-sidenav-menu-heading">Core</div>
-                <a class="nav-link" href="index.html">
-                    <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                    Dashboard
-                </a>
-                <div class="sb-sidenav-menu-heading">Interface</div>
-                <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
-                    <nav class="sb-sidenav-menu-nested nav">
-                        <a class="nav-link" href="layout-static.html">Static Navigation</a>
-                        <a class="nav-link" href="layout-sidenav-light.html">Light Sidenav</a>
-                    </nav>
-                </div>
-                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
-                    <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                    Pages
-                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                </a>
-                <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
-                    <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth">
-                            Authentication
-                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                        </a>
-                        <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
-                            <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="login.html">Login</a>
-                                <a class="nav-link" href="register.html">Register</a>
-                                <a class="nav-link" href="password.html">Forgot Password</a>
-                            </nav>
-                        </div>
-
-                    </nav>
-                </div>
                 <div class="sb-sidenav-menu-heading">Addons</div>
                 <a class="nav-link" href="charts.html">
                     <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                     Charts
+                </a>
+                <a class="nav-link" th:href="@{/admin/movies}">
+                    <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                    Quản lý phim
+                </a>
+                <a class="nav-link" th:href="@{/admin/videos}">
+                    <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                    Quản lý Video
+                </a>
+                <a class="nav-link" th:href="@{/admin/images}">
+                    <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                    Quản lý Image
                 </a>
                 <a class="nav-link" th:href="@{/admin/genre-manager}">
                     <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
@@ -97,14 +76,15 @@
                     <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                     Quản lý năm phát hành
                 </a>
-                <a class="nav-link" th:href="@{/admin/videos}">
+                <a class="nav-link" th:href="@{/admin/casts}">
                     <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                    Quản lý Video
+                    Quản lý diễn viên
                 </a>
-                <a class="nav-link" th:href="@{/admin/images}">
+                <a class="nav-link" th:href="@{/admin/directors}">
                     <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                    Quản lý Image
+                    Quản lý đạo diễn
                 </a>
+
             </div>
         </div>
         <div class="sb-sidenav-footer">
