--- a/src/main/resources/templates/admin/movie-manager.html
+++ b/src/main/resources/templates/admin/movie-manager.html
@@ -30,6 +30,7 @@
                                 <th>Tên</th>
                                 <th>Mô tả</th>
                                 <th>Trạng trái</th>
+                                <th>Số tập</th>
                                 <th>Lượt xem</th>
                                 <th>Hành động</th>
                             </tr>
