--- a/src/main/resources/templates/web/index.html
+++ b/src/main/resources/templates/web/index.html
@@ -64,7 +64,7 @@
         <div class="mylist-container d-flex flex-start flex-middle flex-no-wrap owl-carousel">
             <div class="video">
                 <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}">
+                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/1.jpg}">
                 <div class="video-description d-flex flex-end direction-column">
                     <div class="play-button">
                         <svg viewBox="0 0 24 24">
@@ -89,7 +89,7 @@
             </div>
             <div class="video">
                 <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}">
+                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/canhbuomrakhoingaygio.jpg}">
                 <div class="video-description d-flex flex-end direction-column">
                     <div class="play-button">
                         <svg viewBox="0 0 24 24">
@@ -115,7 +115,7 @@
 
             <div class="video">
                 <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}">
+                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/ironman   .jpg}">
                 <div class="video-description d-flex flex-end direction-column">
                     <div class="play-button">
                         <svg viewBox="0 0 24 24">
