Thêm movie, chưa thêm được vieo dài Signed-off-by: ngochoang0109 <hoangtn0109@gmail.com>

--- a/src/main/resources/templates/admin/movie-manager.html
+++ b/src/main/resources/templates/admin/movie-manager.html
@@ -44,12 +44,12 @@
                                 <td id="statusMovie" >
                                     <span class="badge badge-danger"></span>
                                 </td>
+                                <td id="number"></td>
                                 <td id="viewMovie"></td>
                                 <td class="w-25">
-                                    <button class="btn btn-info mx-3 btnEditGenre"
-                                            type="button"
-                                            data-bs-target="#addGenre" data-bs-toggle="modal">Sửa</button>
-                                    <button class="btn btn-danger btnDeleteGenre"type="button">Xóa</button>
+                                    <button class="btn btn-info mx-3"
+                                            type="button">Sửa</button>
+                                    <button class="btn btn-danger"type="button">Xóa</button>
                                 </td>
                             </tr>
                             </tbody>
