--- a/src/main/resources/templates/admin/movie-add.html
+++ b/src/main/resources/templates/admin/movie-add.html
@@ -13,7 +13,78 @@
             <div class="container-fluid px-4">
                 <div class="row mt-5 d-flex justify-content-center">
                     <div class="col-md-10">
-
+                        <div class="text-center mb-3">
+                            <h1>THEM PHIM MOI</h1>
+                        </div>
+                        <form th:action="@{/admin/movies/add}"
+                              th:object="${movieRequest}"
+                              method="post"
+                              enctype="multipart/form-data">
+                            <div class="mb-3">
+                                <label for="title" class="form-label">Tieu de</label>
+                                <input type="text" id="title" th:field="*{title}" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label for="number" class="form-label">So tap</label>
+                                <input type="number" id="number" th:field="*{number}" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label for="duration" class="form-label">Thoi luong</label>
+                                <input type="number" id="duration" th:field="*{duration}" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label for="releaseYear" class="form-label">Nam phat hanh</label>
+                                <input type="number" id="releaseYear" th:field="*{releaseYear}" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label for="title" class="form-label">Chon anh</label>
+                                <input type="file" id="image" th:field="*{image}" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label for="videoTrailer" class="form-label">Chon video trailer</label>
+                                <input type="file" id="videoTrailer" th:field="*{videoTrailer}" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label for="videoMovie" class="form-label">Chon video movie</label>
+                                <input type="file" id="videoMovie" th:field="*{videoMovie}" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label for="cast" class="form-label">Ten dien vien</label>
+                                <input type="text" id="cast"
+                                       class="form-control"
+                                       th:field="*{cast}"
+                                       placeholder="Yeu cau cac ten dien vien cach nhau bang dau phay">
+                            </div>
+                            <div class="mb-3">
+                                <label for="director" class="form-label">Ten dao dien</label>
+                                <input type="text" id="director"
+                                       th:field="*{director}"
+                                       class="form-control"
+                                       placeholder="Yeu cau cac ten dao dien cach nhau bang dau phay">
+                            </div>
+                            <div class="mb-3">
+                                <label for="genre" class="form-label">The loai</label>
+                                <input type="text" id="genre"
+                                       th:field="*{genre}"
+                                       class="form-control"
+                                       placeholder="Yeu cau cac the loai cach nhau bang dau phay">
+                            </div>
+                            <div class="mb-3">
+                                <label for="country" class="form-label">Quoc gia</label>
+                                <input type="text" id="country"
+                                       th:field="*{country}"
+                                       class="form-control"
+                                       placeholder="Yeu cau cac quoc gia cach nhau bang dau phay">
+                            </div>
+                            <div class="mb-3">
+                                <label for="description" class="form-label">Tom tat noi dung phim</label>
+                                <textarea type="text"
+                                          id="description"
+                                          th:field="*{description}"
+                                          class="form-control"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-info">Luu</button>
+                        </form>
                     </div>
                 </div>
             </div>
