jj Signed-off-by: ngochoang0109 <hoangtn0109@gmail.com>

--- a/src/main/resources/templates/web/index.html
+++ b/src/main/resources/templates/web/index.html
@@ -232,7 +232,7 @@
                      class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
 
             <a href="#">
-                <<img alt=""
+                <img alt=""
                       class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
         </div>
     </section>
