--- a/src/main/resources/templates/web/layout.html
+++ b/src/main/resources/templates/web/layout.html
@@ -20,21 +20,53 @@
           integrity="sha256-t2kyTgkh+fZJYRET5l9Sjrrl4UDain5jxdbqe8ejO8A=" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/web/css/global.css}">
     <link rel="stylesheet" th:href="@{/web/css/browse.css}">
+    <link rel="stylesheet" th:href="@{/web/css/custom.css}">
 </head>
 
 <body>
 <!--=== Header ===-->
 <header th:fragment="header"class="d-flex space-between flex-center flex-middle">
-    <div class="nav-links d-flex flex-center flex-middle">
-        <a href="/">
-            <h2 class="logo logo-text logo-color f-s-28 m-r-25">MovieOline</h2>
-        </a>
-        <a class="nav-item home" href="browse.html">Home</a>
-        <a class="nav-item" href="tvshow.html">TV Show</a>
-        <a class="nav-item" href="movies.html">Movies</a>
-        <a class="nav-item latest" href="latest.html">Latest</a>
-        <a class="nav-item" href="mylist.html">My List</a>
-    </div>
+
+        <ul class="nav-links d-flex flex-center flex-middle" id="header-ul-li">
+            <li>
+                <a href="/">
+                    <h2 class="logo logo-text logo-color f-s-28 m-r-25">MovieOline</h2>
+                </a>
+            </li>
+            <li>
+                <a class="nav-item home" href="browse.html">Trang Chủ</a>
+            </li>
+            <li>
+                <a class="nav-item" href="tvshow.html">Phim Mới</a>
+            </li>
+            <li>
+                <a class="nav-item" href="tvshow.html">Phim Bộ</a>
+            </li>
+            <li>
+                <a class="nav-item" href="movies.html">Phim Lẻ</a>
+            </li>
+            <li id="header-genre">
+                <a class="nav-item latest" href="latest.html">Thể Loại</a>
+                <ul class="sub-nav">
+                    <th:block>
+                        <li th:each="item:${lstGenre}">
+                            <a href="" th:text="${item.name}"></a>
+                        </li>
+                    </th:block>
+                </ul>
+            </li>
+            <li>
+                <a class="nav-item" href="mylist.html">Quốc Gia</a>
+            </li>
+        </ul>
+
+
+
+
+
+
+
+
     <div class="righticons d-flex flex-end flex-middle">
         <a href="search.html">
             <i aria-hidden="true" class="fa fa-search icon-search"></i>
@@ -108,6 +140,7 @@
 <script crossorigin="anonymous"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
